<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/signup_info_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.22"
            android:enabled="false"
            android:text="@string/signup_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/signup_name_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/signup_firstname_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_firstname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
        
        <TextView
            android:id="@+id/signup_pseudo_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_pseudo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_pseudo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/signup_telnumber_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_telnumber"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_telnumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
        

        <TextView
            android:id="@+id/signup_email_label"
            android:layout_width="188dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.03"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/signup_address" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>

        <TextView
            android:id="@+id/signup_password_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/signup_confirm_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/signup_confirm"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/signup_confirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/revers_heure_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2.22"
                android:enabled="false"
                android:text="@string/date_de_naissance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:calendarViewShown="false"
                android:endYear="2007"
                android:startYear="1950" />
        </RelativeLayout>

        <Button
            android:id="@+id/signup_signupbutton"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/signup_signup" />
    </LinearLayout>

</ScrollView>