<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="264dp"
                    android:layout_height="125dp"

                    android:contentDescription="@string/description"
                    android:src="@drawable/boxit2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/login_email_label"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.54"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:enabled="false"
                    android:linksClickable="false"
                    android:text="@string/login_pseudo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/login_pseudo_in" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/login_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="26dp"
                    android:enabled="false"
                    android:text="@string/login_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/login_login" />

            <Button
                android:id="@+id/login_signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="29dp"
                android:text="@string/login_signup" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>